# dtcc-core-old

./: .env  .gitignore  CMakeLists.txt  README.md  config.yml  core.py  docker-compose.yml  pyproject.toml  requirements.txt
archives/core/: run.py  run_in_shell_old.py
archives/docker/install_scripts/: install_dependencies.sh  install_py_libs.sh
archives/src/: task_runner_subscriber.py
archives/src/common/: logger.py  redis_service.py
core/: api.py  data_models.py  file_handlers.py  logger.py  minio_progress.py  minio_service.py  mogodb_service.py  pub_sub_base.py  rabbitmq_service.py  registry_manager.py  run_in_shell.py  template-module-config.json  utils.py
doc/: README.md  development.md  installation.md  introduction.md  usage.md
docker/: .env  Dockerfile  docker-compose.yml  dtcc-build-image  dtcc-create-container  dtcc-remove-container  dtcc-start-container  dtcc-uninstall  index.html  sources.list
docker/install_scripts/: README.md  install_assimp.sh  install_debugging.sh  install_dependencies.sh  install_packages.sh  install_protobuf.sh  install_py_libs.sh  install_python.sh
include/: dtcc.pb.cc  dtcc.pb.h
install_scripts/: install_py_libs.sh
protobuf/: build  dtcc.proto
scripts/: run-dtcc-modules.sh
src/: app_fast.py  build-protbuf.sh  dtcc-convert-geodata.py  external_task.py  file_sharing.py  hello_pybind.py  ls_out.sh  main.py  mq_pub_sub.py  redis_pub_sub.py  requirements.txt  run.sh  task_runner_subscriber.py  task_scheduler_publisher.py  tasks.py  test_fast_api.py  test_schduler.py  test_scheduler.py  utils.py
src/common/: logger.py  mq_service.py  rabbitmq_service.py  redis_service.py  run_in_shell.py  scheduler.py  utils.py
src/dtcc/: CMakeLists.txt  builder.py  cityModel.py  core.py  dtcc_pb2.py  hdf5.py  iboflow.py  json.py  pointCloud.py  protobuf.py
src/dtcc/cpp/: generate_protobuf.cpp
src/dtcc/tasks/: DtccGenerateCitymodel.py  DtccGenerateMesh.py
src/dtcc/tasks/dtcc/: GenerateCitymodel.py  GenerateMesh.py  GenerateTest.py
src/tests/: sample_logging_process.py
tests/: sample_logging_process.py  test_listener.py  test_log_consumer.py  test_run_in_shell.py
unittests/: test.py
(+6 files in other folders)
